GTK+-3 Submarine themes: fix jumping pathbar toggle button

--- a/desktop-themes/Blue-Submarine/gtk-3.0/mate-applications.css
+++ b/desktop-themes/Blue-Submarine/gtk-3.0/mate-applications.css
@@ -177,7 +177,7 @@ paned.horizontal > box.vertical.caja-side-pane > notebook scrolledwindow.frame {
 
 /* pathbar buttons */
 .caja-pathbar button {
-    padding: 4px;
+    padding: 3px 4px;
 }
 
 /* arrow button */
@@ -221,7 +221,7 @@ paned.horizontal > box.vertical.caja-side-pane > notebook scrolledwindow.frame {
     margin: 0px -2px 0px -2px;
     border-width: 1px 0px;
     border-radius: 0px;
-    padding: 4px 6px;
+    padding: 3px 6px;
 }
 
 .caja-search-bar entry,
